# dmux

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/dmux/: Cargo.toml
crates/dmux-client/: Cargo.toml
crates/dmux-client/src/: lib.rs
crates/dmux-core/: Cargo.toml
crates/dmux-core/src/: lib.rs
crates/dmux-proto/: Cargo.toml
crates/dmux-proto/src/: lib.rs
crates/dmux-server/: Cargo.toml
crates/dmux-server/src/: lib.rs
crates/dmux/src/: dmux_client.rs  dmux_server.rs  main.rs
docs/: INSTALL.md  RELEASE.md  rewrite-plan.md  tmux-command-coverage.md
scripts/: generate_tmux_command_coverage.sh  install.sh
