[package]
name = "dmux-rs-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Client library for dmux-rs (Rust tmux clone) — sends requests over UDS to dmux-rs-server."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "dmux_client"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
dmux-proto = { version = "0.1.0", path = "../dmux-proto", package = "dmux-rs-proto" }
