[package]
name = "dmux-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core state model for dmux-rs (Rust tmux clone) — sessions, windows, panes, layouts."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "dmux_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
