[package]
name = "dmux-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "dmux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dmux-client = { version = "0.1.0", path = "../dmux-client", package = "dmux-rs-client" }
dmux-proto = { version = "0.1.0", path = "../dmux-proto", package = "dmux-rs-proto" }
dmux-server = { version = "0.1.0", path = "../dmux-server", package = "dmux-rs-server" }
crossterm = "0.28"
